test/langtools/tools/javac/lambda/8043179/LambdaMutateFinalVar.out
LambdaMutateFinalVar.java:10:29: compiler.err.var.might.already.be.assigned: x
1 error
